# speakx-notification-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start-dev.sh
.claude/: launch.json
alembic/: env.py
alembic/versions/: 3dff58c49920_make_notification_events_notification_.py  5a701e1481e2_add_notification_image_path.py  7832c636fe7a_create_analytics_tables.py  a1b2c3d4e5f6_nullable_notification_event_notif_id.py  c81e04b22196_create_notification_tables.py  e104892b7717_create_user_and_config_tables.py  f16ca886f985_create_journey_hierarchy_tables.py
app/: main.py
app/analytics/: attribution.py  clevertap_sync.py  snapshots.py  tracking.py
app/api/: admin.py  deps.py  health.py  router.py  tracking.py
app/config/: manager.py  settings.py
app/events/: consumer.py  processor.py  schemas.py
app/ingestion/: parser.py  schemas.py  service.py  validator.py
app/llm/: claude_provider.py  provider.py  schemas.py
app/models/: __init__.py  analytics.py  base.py  config.py  journey.py  notification.py  user.py
config/: defaults.yaml
docs/: api.md  go-live-checklist.md  metabase-queries.md
scripts/: load_test.py
templates/: fallback_notifications.json  notification_examples.json
tests/: conftest.py  test_clevertap.py  test_edge_cases.py  test_frequency_cap.py  test_health.py  test_ingestion.py  test_llm_output.py  test_state_machine.py  test_temporal.py
workers/: celery_app.py  event_consumer.py  ingestion_worker.py  notification_worker.py  temporal_worker.py
(+30 files in other folders)
